--- a/Study/EDA, 전처리 실전정리+모델링 튜닝 개념정리.ipynb
+++ b/Study/EDA, 전처리 실전정리+모델링 튜닝 개념정리.ipynb
@@ -104,7 +104,7 @@
     "#EDA에 방해될 정도로 결측치가 많다면 먼저 처리해줘도 됨\n",
     "#EDA단계에서 데이터를 변형시켜서 분석하기도 함\n",
     "#애초에 원본 데이터를 카피해서 EDA 진행하는 것이 좋음\n",
-    "df_copy = df"
+    "df_copy = df.copy()"
    ]
   },
   {
@@ -116,19 +116,32 @@
    "outputs": [],
    "source": [
     "#범주형 데이터와 선형 데이터 분류(하면 데이터 전처리할 때 편함)\n",
+    "#리스트로 추출\n",
     "categorical_features = [col for col in train.columns if train[col].dtype == 'object']\n",
     "numerical_features = [col for col in train.columns if train[col].dtype == 'int64']\n",
+    "#df로 추출\n",
+    "df_str = df[df.columns.difference(df.describe().columns)]\n",
+    "df_int = df[df.describe().columns]\n",
     "#이렇게도 가능\n",
     "cat = data.select_dtypes(exclude=np.number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ORfBVbpc9I60"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2273184288.py, line 46)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 46\u001b[1;36m\u001b[0m\n\u001b[1;33m    or\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#데이터 세부적인 모습 살펴보기\n",
     "\n",
@@ -154,6 +167,21 @@
     "#이렇게하면 그래프 그려줌\n",
     "df.groupby(['column1'])['column2'].mean().plot()\n",
     "\n",
+    "#Series 정렬(위의 평균 구하는 코드의 출력이 Series형임)\n",
+    "#인덱스 기준 정렬\n",
+    "obj.sort_index(ascending = False) #ascending = False 없으면 오름차순(default) 정렬, 있으면 내림차순 정렬\n",
+    "#값 기준 정렬\n",
+    "obj.sort_values(ascending = False)\n",
+    "\n",
+    "#DataFrame 정렬\n",
+    "#인덱스 기준 정렬\n",
+    "df.sort_index(axis=0,ascending=True) #기본\n",
+    "#컬럼 기준 정렬\n",
+    "df.sort_index(axis=1,ascending=True)\n",
+    "#값 기준 정렬\n",
+    "df.sort_values(by='column',axis=0,ascending=True) #기본값\n",
+    "df.sort_values(by='row',axis=1,ascending=True)\n",
+    "\n",
     "#두 column의 상관관계(합, 평균) 출력\n",
     "sample_sum = df[['column1','column2']].groupby('column1').sum()\n",
     "sample_mean = df[['column1','column2']].groupby('column1').mean()\n",
@@ -171,9 +199,13 @@
     "#조건 여러개를 각 칼럼에 달고싶으면 이렇게\n",
     "df[(df['column1']!='value') & (df['column2']>=n)]\n",
     "#조건을 만족하는 column 데이터들의 다른 column정보 출력\n",
+    "df[df['column'] == 'value']['column1']\n",
+    "or\n",
     "df[df['column'] > 180] [['column1', 'column2']]\n",
     "or\n",
     "df.loc[df['column'] > 180, 'column2' : 'column5'] #이런식으로도 가능\n",
+    "#조건을 만족하는 샘플의 다른 column 정보 출력\n",
+    "\n",
     "\n",
     "#column에서 특정 'value'를 갖는 데이터만 추출\n",
     "df_ = df['column'] == 'value'\n",
@@ -196,11 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "kILUbqt_9I9Y"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3736777379.py, line 52)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 52\u001b[1;36m\u001b[0m\n\u001b[1;33m    문자열\t약자\u001b[0m\n\u001b[1;37m       \t^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#그래프 그려서 살펴보기(위 분석기법들 활용해서 그래프 그래면 자세한 분석 가능)\n",
     "\n",
@@ -250,6 +291,9 @@
     "#plt.plot 형식으로 각종 그래프 그리기\n",
     "#명령어 기본 형태\n",
     "plt.plot('column1', 'column2', data = df) #column1이 x축, column2가 y축이 기본\n",
+    "or\n",
+    "df.plot() #plot()안에 kind = 'box' 넣으면 박스플롯, plot을 hist로 바꾸면 히스토그램\n",
+    "\n",
     "#아래는 plt.plot()에 추가할 수 있는 스타일들. 디테일을 넣어줄 때 필요함\n",
     "#쓸때는 위 명령어의 ()안에 ''와 함께 써주면 됨\n",
     "색깔\n",
@@ -297,12 +341,18 @@
     "plt.savefig('plot1.png') #그래프를 .jpg로 저장\n",
     "plt.show()\n",
     "\n",
+    "#그래프 합치기\n",
+    "plt.(x1, y1, label = '범례1')\n",
+    "plt.(x2, y2, label = '범례2')\n",
+    "plt.legend() #label을 정상적으로 표시하고 싶으면 이 명령어를 사용해야 함\n",
+    "plt.show()\n",
+    "\n",
     "#독특한 형태의 그래프들(그래프마다 세부사항을 조절하는 다양한 명령어들이 있음. 너무 복잡해서 여기엔 중요한 것들만 적음)\n",
     "#자주 쓰는 것들\n",
     "#column에 대한 히스토그램 그래프를 그려줌\n",
     "sns.distplot(df['column'], kde=True, bins=None) #kde : 선그래프 출력 유무, bins : 그래프x축 얼마나 촘촘히 나눌건지(높을수록 촘촘함)\n",
     "#두 column에 대한 (scatterplot : 산점도)를 그려줌\n",
-    "sns.scatterplot(data = df, x='column1', y = 'column2') #hue = 'column3' 하면 column3에 대해 점들의 색을 나눠줌\n",
+    "sns.scatter(data = df, x='column1', y = 'column2') #hue = 'column3' 하면 column3에 대해 점들의 색을 나눠줌\n",
     "#막대그래프\n",
     "sns.barplot(data = df, x='column1', y = 'column2', ci=None) #ci=None : 신뢰구간(95%) 표시 안함\n",
     "\n",
@@ -341,6 +391,23 @@
    },
    "source": [
     "전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#간단한 전처리\n",
+    "\n",
+    "#범주형 데이터 변환\n",
+    "df['column'].replace({'':1,'':2,'':3}, inplace=True)\n",
+    "\n",
+    "#특정 열 삭제하기\n",
+    "df = df.drop('column', axis=1) #간접삭제\n",
+    "df.drop('column', axis=1, inplace=True)\n",
+    "del df['column'] #직접삭제"
    ]
   },
   {
@@ -388,7 +455,6 @@
     "\n",
     "\n",
     "#승선지(Embarked)와 객실 등급(Pclass)에 따른 생존율(Survived)\n",
-    "#왜 이게 생존율을 구하게 되는지 이해가 안됨.\n",
     "grid = sns.FacetGrid(train_df, row='Embarked', height=2.2, aspect=1.6)\n",
     "# Pointplot으로 시각화, x: 객실 등급, y: 생존 여부, 색깔: 성별, x축 순서: [1, 2, 3], 색깔 순서: [남성, 여성]\n",
     "grid.map(sns.pointplot, 'Pclass', 'Survived', 'Sex', palette='deep', order = [1, 2, 3], hue_order = [\"male\", \"female\"])\n",
