--- a/Handson_ML/Ensemble_and_RandomForest.ipynb
+++ b/Handson_ML/Ensemble_and_RandomForest.ipynb
@@ -51,7 +51,7 @@
    "id": "64a9abc9",
    "metadata": {},
    "source": [
-    "투표 기반 분류기\n",
+    "## 투표 기반 분류기\n",
     "\n",
     "매우 간단한 분류기 앙상블 방법은 여러 분류기의 예측을 모아서 가장 많이 선택된 클래스를 예측하는 것이다. 이런 다수결 분류기를 직접 투표 분류기라 한다."
    ]
@@ -212,7 +212,7 @@
    "id": "9a6f4803",
    "metadata": {},
    "source": [
-    "배깅, 페이스팅\n",
+    "## 배깅, 페이스팅\n",
     "\n",
     "다양한 분류기를 만들기 만들기 위해 각기 다른 모델을 사용할 수도 있지만, 같은 알고리즘을 사용하되 훈련 세트의 서브셋을 무작위로 구성하여 각기 다르게 학습시킬 수도 있다. 이 때 서브셋간의 데이터 중복을 허용하면 배깅, 허용하지 않으면 페이스팅이라 한다.\n",
     "\n",
@@ -413,7 +413,7 @@
    "id": "41b51b5c",
    "metadata": {},
    "source": [
-    "랜덤 패치, 랜덤 서브스페이스\n",
+    "## 랜덤 패치, 랜덤 서브스페이스\n",
     "\n",
     "BaggingClassifier은 특성 샘플링을 지원한다(max_features, bootstrap_features). 이 기법은 고차원 데이터셋을 다룰 때 유용하다.\n",
     "\n",
@@ -510,7 +510,7 @@
    "id": "0f30708a",
    "metadata": {},
    "source": [
-    "랜덤 포레스트는 트리 노드를 분할할 때 전체 특성 중 최선의 특성을 찾는 대신 무작위 선택된 특성군 중에서 최적의 특성을 찾는 것으로 무작위성을 확보한다. 이는 트리를 다양하게 만들고 편향을 손해보는 대신 분산을 낮추어 전체적으로 더 훌륭한 모델을 만들어낸다. 트리를 만들 때 여기서 더욱 무작위하게 만들기 위해 최적의 임계값을 찾는 대신 후보 특성을 사용해 무작위로 분할한 다음 그중에서 최상의 분할을 선택할 수 있다. 이같이 극단적으로 무작위한 트리의 랜덤 포레스트를 익스트림 랜덤 트리(줄여서 엑스트라 트리)라고 한다. 여기서고 역시 편향이 늘어나지만 분산을 낮추게 된다.\n",
+    "랜덤 포레스트는 트리 노드를 분할할 때 전체 특성 중 최선의 특성을 찾는 대신 무작위 선택된 특성군 중에서 최적의 특성을 찾는 것으로 무작위성을 확보한다. 이는 트리를 다양하게 만들고 편향을 손해보는 대신 분산을 낮추어 전체적으로 더 훌륭한 모델을 만들어낸다. 트리를 만들 때 여기서 더욱 무작위하게 만들기 위해 최적의 임계값을 찾는 대신 후보 특성을 사용해 무작위로 분할한 다음 그중에서 최상의 분할을 선택할 수 있다. 이같이 극단적으로 무작위한 트리의 랜덤 포레스트를 **익스트림 랜덤 트리**(줄여서 엑스트라 트리)라고 한다. 여기서고 역시 편향이 늘어나지만 분산을 낮추게 된다.\n",
     "\n",
     "엑스트라 트리는 사이킷런의 ExtraTreeClassifier로 만들 수 있다."
    ]
@@ -520,7 +520,7 @@
    "id": "1a2e493e",
    "metadata": {},
    "source": [
-    "랜덤 포레스트의 또 다른 장점은 특성의 상대적 중료도를 측정하기 쉽다는 것이다. 노드가 사용한 특성이 평균적으로 불순도를 얼마나 감소시키는지 확인하여 특성의 중요도를 측정한다. 이는 가중치 평균이며 각 노드의 가중치는 연관된 샘플 수와 같다. 사이킷런은 훈련이 끝나고 자동으로 이 점수를 계산하여 합이 1이 되도록 정규화한다. 이는 feature_importances_ 변수에 저장되어 있따."
+    "랜덤 포레스트의 또 다른 장점은 특성의 상대적 중요도를 측정하기 쉽다는 것이다. 노드가 사용한 특성이 평균적으로 불순도를 얼마나 감소시키는지 확인하여 특성의 중요도를 측정한다. 이는 가중치 평균이며 각 노드의 가중치는 연관된 샘플 수와 같다. 사이킷런은 훈련이 끝나고 자동으로 이 점수를 계산하여 합이 1이 되도록 정규화한다. 이는 feature_importances_ 변수에 저장되어 있따."
    ]
   },
   {
@@ -639,7 +639,7 @@
    "id": "747c2f95",
    "metadata": {},
    "source": [
-    "부스팅\n",
+    "## 부스팅\n",
     "\n",
     "앞의 모델을 보완해나가면서 일련의 예측기를 학습시켜가는 것. 에이다부스트와 그레디언트 부스팅이 인기있음.\n",
     "\n",
@@ -1324,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
